proxy-kubernetes/kustomize-bases/minecraft-gateway-bungeecord/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bungeecord
  name: bungeecord
  # We wish this deployment to be reloaded
  # when "bungeecord-config" and "bungeecord-plugin-configs" ConfigMap are updated
  annotations:
    configmap.reloader.stakater.com/reload: "bungeecord-config,bungeecord-plugin-configs"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bungeecord
  template:
    metadata:
      labels:
        app: bungeecord
    spec:
      containers:
        - resources:
            requests:
              memory: 768Mi
          image: itzg/bungeecord:java17-2022.1.0
          name: bungeecord
          ports:
            - containerPort: 25577
              name: minecraft
          readinessProbe:
            failureThreshold: 2
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 2
            tcpSocket:
              port: 25577
            timeoutSeconds: 1
          volumeMounts:
            # itzg/bungeecord は /config に設定ファイルをマウントしておけばコピーをしてくれる。
            # 環境変数の置き換えはPrefix等の設定が必要なので、必要になったら設定するように。
            # https://github.com/itzg/docker-bungeecord/tree/9113d93882d1945d5469141b77eb922233842be9#volumes
            - name: bungeecord-config
              mountPath: /config/config.yml
              subPath: config.yml
            - name: server-icon-download-volume
              mountPath: /config/server-icon.png
              subPath: server-icon.png
            # 普通にマウントすると、auto-update (常に最新のvolume内容がコンテナ内から見える) の挙動を
            # 提供するために symlink による一時ディレクトリがマウントされることになるが、
            # itzg/bungeecord が利用するファイル同期の仕組み (itzg/mc-image-helper) は
            # symlink を展開してしまうため、設定ファイルのパスが壊れてしまう。
            #
            # subPathを利用してマウントすればsymlinkが作られることを回避できるためそのようにしている。
            # 参考: https://stackoverflow.com/a/63114800
            # 参考: https://stackoverflow.com/a/50687707
            - name: bungeecord-plugin-configs
              mountPath: /config/plugins/BungeeHubCommand/config.yml
              subPath: BungeeHubCommand-config.yml
            - name: bungeecord-plugin-configs
              mountPath: /config/plugins/BungeeKick/config.yml
              subPath: BungeeKick-config.yml
            - name: bungeecord-plugin-configs
              mountPath: /config/plugins/BungeeSemaphore/config.yml
              subPath: BungeeSemaphore-config.yml
            - name: bungeecord-plugin-configs
              mountPath: /config/plugins/RedisBungee/config.yml
              subPath: RedisBungee-config.yml
            - name: bungeecord-plugin-configs
              mountPath: /config/plugins/SwiftMOTD/config.yml
              subPath: SwiftMOTD-config.yml
            - name: bungeecord-plugin-configs
              mountPath: /config/plugins/TCPShield/config.yml
              subPath: TCPShield-config.yml
      volumes:
        - name: bungeecord-config
          configMap:
            name: bungeecord-config
        - name: bungeecord-plugin-configs
          configMap:
            name: bungeecord-plugin-configs
        # サーバーアイコンをinitContainerでダウンロードしてBugneeCordに受け渡すためのvolume
        - name: server-icon-download-volume
          emptyDir: {}
