proxy-kubernetes/kustomize-bases/minecraft-gateway-bungeecord/service-bungeecord-jmx-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bungeecord-jmx
spec:
  type: ClusterIP
  ports:
    - name: bungeecord-jmx-port
      port: 18321
      protocol: TCP
      targetPort: bungeecord-jmx-port
  selector:
    app: bungeecord
