proxy-kubernetes/kustomize-bases/minecraft-gateway-bungeecord/networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bungeecord--allow-egress-cloudflared
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          appgroup: cloudflared
  podSelector:
    matchLabels:
      app: bungeecord
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bungeecord--allow-egress-dns
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: bungeecord
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bungeecord--allow-egress-www
spec:
  egress:
  - ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: bungeecord
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bungeecord--default-deny-egress-all
spec:
  podSelector:
    matchLabels:
      app: bungeecord
  policyTypes:
  - Egress
